components/policies/pod-security-standards/baseline/ban-or-restrict-host-ports/test/cronjob-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              ports:
                - name: admin
                  containerPort: 8000
                  protocol: TCP
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              ports:
                - name: admin
                  containerPort: 8000
                  protocol: TCP
                - name: web-insecure
                  containerPort: 8080
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
            - name: container02
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
            - name: container02
              image: dummyimagename
              ports:
                - name: admin
                  containerPort: 8000
                  protocol: TCP
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              ports:
                - name: web-insecure
                  containerPort: 8080
            - name: container02
              image: dummyimagename
              ports:
                - name: admin
                  containerPort: 8000
                  protocol: TCP
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob08
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              ports:
                - name: web-insecure
                  containerPort: 8080
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob09
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              ports:
                - name: web-insecure
                  containerPort: 8080
          containers:
            - name: container01
              image: dummyimagename
              ports:
                - name: web-insecure
                  containerPort: 8080
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob10
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
            - name: initcontainer02
              image: dummyimagename
              ports:
                - name: web-insecure
                  containerPort: 8080
          containers:
            - name: container01
              image: dummyimagename
              ports:
                - name: web-insecure
                  containerPort: 8080
---
