components/policies/pod-security-standards/baseline/ban-or-restrict-host-ports/test/deployment-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
            - name: web-insecure
              containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
        - name: container02
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
---
