components/policies/pod-security-standards/baseline/ban-or-restrict-host-ports/test/job-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
            - name: dns
              containerPort: 5553
              hostPort: 53
              protocol: UDP
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
            - name: dns
              containerPort: 5553
              hostPort: 53
              protocol: UDP
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
        - name: container02
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
              protocol: UDP
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob05
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: web-secure
              containerPort: 4443
              hostPort: 443
        - name: container02
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
              protocol: UDP
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob07
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob08
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob09
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          ports:
            - name: web
              containerPort: 4443
              hostPort: 443
        - name: initcontainer02
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob10
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          ports:
            - name: dns
              containerPort: 5553
              hostPort: 53
      containers:
        - name: container01
          image: dummyimagename
---
