components/policies/pod-security-standards/baseline/ban-or-restrict-host-ports/test/job-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
            - name: web-insecure
              containerPort: 8080
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob05
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
        - name: container02
          image: dummyimagename
          ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob07
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob08
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob09
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob10
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
      containers:
        - name: container01
          image: dummyimagename
          ports:
            - name: web-insecure
              containerPort: 8080
---
