components/policies/pod-security-standards/baseline/ban-or-restrict-host-ports/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
    - name: container02
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: web-secure
          containerPort: 4443
          hostPort: 443
    - name: container02
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      ports:
        - name: web
          containerPort: 4443
          hostPort: 443
    - name: initcontainer02
      image: dummyimagename
      ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
  containers:
    - name: container01
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
  containers:
    - name: container01
      image: dummyimagename
---
